updated to add recommended changes